CREATE CRUD App Log - Route - API - Trait
