# storage/api-docs/api-docs.json
@@ -12,6 +12,99 @@
         }
     ],
     "paths": {
+        "/api/app-logs": {
+            "get": {
+                "tags": [
+                    "AppLogs"
+                ],
+                "summary": "Get All AppLogs",
+                "description": "Get All App Logs Data",
+                "operationId": "getAppLog",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Forbidden"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Item not Found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Forbidden"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/app-logs/{id}": {
+            "get": {
+                "tags": [
+                    "AppLogs"
+                ],
+                "summary": "Display the specified item",
+                "operationId": "appLogShow",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Identifier of item that needs to be displayed",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "404": {
+                        "description": "Item not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "200": {
+                        "description": "Successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/login": {
             "post": {
                 "tags": [
@@ -3228,6 +3321,10 @@
         }
     },
     "tags": [
+        {
+            "name": "AppLogs",
+            "description": "AppLogs"
+        },
         {
             "name": "Authentication",
             "description": "Authentication"
